compiler/testData/diagnostics/tests/declarationChecks/kt47245.fir.kt
// SKIP_KT_DUMP

fun test() {
    for (i in 0..0) fun <!SINGLE_ANONYMOUS_FUNCTION_WITH_NAME_ERROR!>x<!>() {}
}
